<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:hint="@string/name"
                android:padding="10dp"
                android:layout_height="wrap_content">
            </EditText>

            <EditText
                android:id="@+id/lastname_text"
                android:layout_width="match_parent"
                android:hint="@string/lastname"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
            </EditText>

            <EditText
                android:id="@+id/dni_text"
                android:layout_width="match_parent"
                android:hint="@string/dni"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
            </EditText>

            <EditText
                android:id="@+id/group_text"
                android:layout_width="match_parent"
                android:hint="@string/group"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
            </EditText>

            <EditText
                android:id="@+id/commission_text"
                android:layout_width="match_parent"
                android:hint="@string/commission"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
            </EditText>

            <EditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:hint="@string/email_address"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
            </EditText>

            <EditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:layout_height="wrap_content">
            </EditText>

            <EditText
                android:id="@+id/password_confirmation_text"
                android:layout_width="match_parent"
                android:hint="@string/confirm_password"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:layout_height="wrap_content">
            </EditText>

            <Button
                android:id="@+id/registration_btn"
                android:layout_width="match_parent"
                android:text="@string/sign_up"
                android:onClick="onRegistrationClick"
                android:enabled="false"
                android:background="@drawable/login_btn_background"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textAllCaps="false"
                android:textSize="20sp">
            </Button>

            <TextView
                android:id="@+id/already_registered"
                android:layout_width="wrap_content"
                android:text="@string/already_have_an_account"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onLoginClick"
                android:textAllCaps="false"
                android:layout_marginTop="30dp">
            </TextView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>