<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onLogoutClick"
        android:text="@string/logout" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/recordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@android:drawable/presence_audio_online"
            android:onClick="onRecordClick"
            android:text="@string/record" />

        <Button
            android:id="@+id/pauseResumeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@android:drawable/ic_media_pause"
            android:onClick="onPauseResumeClick"
            android:text="@string/pause" />

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/checkbox_off_background"
            android:onClick="onStopClick"
            android:text="@string/stop"
            android:layout_weight="1" />

    </LinearLayout>
</RelativeLayout>