<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/home_layout"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/user_text"
                android:focusedByDefault="true"
                android:layout_width="match_parent"
                android:hint="@string/email_address"
                android:padding="10dp"
                android:ems="10"
                android:layout_height="wrap_content">
            </EditText>

            <EditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:layout_height="wrap_content">
            </EditText>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:text="@string/sign_in"
                android:enabled="false"
                android:onClick="onLoginClick"
                android:background="@drawable/login_btn_background"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:textSize="20sp">
            </Button>

            <TextView
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:text="@string/sign_up"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onSignUpClick"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:textSize="20sp">
            </TextView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>